# gdnts-ci

./: .gitignore  Makefile  README.md  kind-config.yaml  project.garden.yml
.github/workflows/: k8s-ci.yml
charts/http-echo/: Chart.yaml  README.md  README.md.gotmpl  garden.yml  values.yaml
charts/http-echo/templates/: _helpers.tpl  certificate.yaml  deployment-bar.yaml  deployment-foo.yaml  hpa-bar.yaml  hpa-foo.yaml  ingress.yaml  networkpolicy.yaml  service-bar.yaml  service-foo.yaml  serviceaccount.yaml
cluster/: garden.yml
infra/certmanager/: garden.yml  values.yaml
infra/certmanager/manifests/: cluster-issuer.yaml
infra/ingress/: garden.yml  values.yaml
infra/prometheus/: garden.yml  values.yaml
loadtest/scripts/: load.js
reports/: pyproject.toml
reports/scripts/: __init__.py  generate_reports.py  report.html.template
validators/: garden.yml
